kubernetes-orchestration/kubernetes-assignment/frontend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  selector:
    matchLabels:
      app-label: frontend-app
  replicas: 1
  template:
    metadata:
      labels:
        app-label: frontend-app
    spec:
      containers:
        - name: frontend
          image: ssamantr/frontend-service:1.0.0
          ports:
            - containerPort: 80
          startupProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app-label: frontend-app
  ports:
    - port: 80
      targetPort: 9090
