kubernetes-orchestration/kubernetes-assignment/job-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-app
spec:
  selector:
    matchLabels:
      app-label: job-app
  replicas: 1
  template:
    metadata:
      labels:
        app-label: job-app
    spec:
      containers:
        - name: job-app
          image: ssamantr/job-service:1.0.0
          ports:
            - name: "job-port"
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 2
            failureThreshold: 35
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 2000m
              memory: 2000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: job-service
spec:
  selector:
    app-label: job-app
  ports:
    - port: 8080
      targetPort: 8080
